--- a/FastQR/FastQR.csproj
+++ b/FastQR/FastQR.csproj
@@ -20,6 +20,11 @@
     <Folder Include="res\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
+
   <!-- Include Nuget Package for Tizen Project building -->
 
 </Project>
