--- a/FastQRDummy/FastQRDummy.csproj
+++ b/FastQRDummy/FastQRDummy.csproj
@@ -1,11 +1,9 @@
 ﻿<Project Sdk="Tizen.NET.Sdk/1.1.7">
 
-  <!-- Property Group for Tizen40 Project -->
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>tizen40</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
+      <AssemblyName>FastQRDummy</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -16,18 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="lib\" />
-    <Folder Include="res\" />
+    <Folder Include="lib\"/>
+    <Folder Include="res\"/>
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\FastQRDummy\FastQRDummy.csproj" />
-  </ItemGroup>
-
-  <!-- Include Nuget Package for Tizen Project building -->
 
 </Project>
